--- a/TP03MainProj/Web.config
+++ b/TP03MainProj/Web.config
@@ -27,11 +27,13 @@
     </handlers>
   </system.webServer>
 	<connectionStrings>
-		<add name="DefaultConnection"
-			 connectionString="Data Source=(LocalDb)\MSSQLLocalDB;Initial Catalog=MyApplicationDB;Integrated Security=SSPI;"
+		<add name="MyDatabase"
+			 connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\MyApplicationDB.mdf;Initial Catalog=MyApplicationDB_New;Integrated Security=True;"
 			 providerName="System.Data.SqlClient" />
 	</connectionStrings>
-  <runtime>
+
+
+	<runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
         <assemblyIdentity name="Antlr3.Runtime" publicKeyToken="eb42632606e9261f" />
