--- a/TP03MainProj/TP03MainProj.csproj
+++ b/TP03MainProj/TP03MainProj.csproj
@@ -171,6 +171,10 @@
     <Compile Include="Migrations\202404020828331_ReverseProductTable.Designer.cs">
       <DependentUpon>202404020828331_ReverseProductTable.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202404021322456_CalenderModify.cs" />
+    <Compile Include="Migrations\202404021322456_CalenderModify.Designer.cs">
+      <DependentUpon>202404021322456_CalenderModify.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\CalenderDate.cs" />
     <Compile Include="Models\Events.cs" />
@@ -1365,6 +1369,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202404020828331_ReverseProductTable.resx">
       <DependentUpon>202404020828331_ReverseProductTable.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202404021322456_CalenderModify.resx">
+      <DependentUpon>202404021322456_CalenderModify.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
