--- a/TP03MainProj/TP03MainProj.csproj
+++ b/TP03MainProj/TP03MainProj.csproj
@@ -175,6 +175,10 @@
     <Compile Include="Migrations\202404021322456_CalenderModify.Designer.cs">
       <DependentUpon>202404021322456_CalenderModify.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202404061112471_Events_And_CultureDate_Model_Modified.cs" />
+    <Compile Include="Migrations\202404061112471_Events_And_CultureDate_Model_Modified.Designer.cs">
+      <DependentUpon>202404061112471_Events_And_CultureDate_Model_Modified.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\CalenderDate.cs" />
     <Compile Include="Models\Events.cs" />
@@ -1178,7 +1182,7 @@
     <Content Include="Content\Customer\vendor\phpmailer\phpmailer\LICENSE" />
     <Content Include="Content\Customer\vendor\phpmailer\phpmailer\PHPMailerAutoload.php" />
     <Content Include="Content\Customer\vendor\phpmailer\phpmailer\VERSION" />
-    <Content Include="Scripts\calender.js" />
+    <Content Include="Scripts\calendar.js" />
     <Content Include="Scripts\Customer\countdown-custom.js" />
     <Content Include="Scripts\Customer\custom-marquee.js" />
     <Content Include="Scripts\Customer\custom-swiper-1.js" />
@@ -1372,6 +1376,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202404021322456_CalenderModify.resx">
       <DependentUpon>202404021322456_CalenderModify.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202404061112471_Events_And_CultureDate_Model_Modified.resx">
+      <DependentUpon>202404061112471_Events_And_CultureDate_Model_Modified.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
