--- a/TP03MainProj/TP03MainProj.csproj
+++ b/TP03MainProj/TP03MainProj.csproj
@@ -142,6 +142,7 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
+    <Compile Include="Controllers\EducationController.cs" />
     <Compile Include="Controllers\EventsController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Global.asax.cs">
@@ -177,6 +178,7 @@
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\CalenderDate.cs" />
+    <Compile Include="Models\Education.cs" />
     <Compile Include="Models\Events.cs" />
     <Compile Include="Models\MyApplicationContext.cs" />
     <Compile Include="Models\Product.cs" />
@@ -1319,6 +1321,14 @@
     <Content Include="Views\Events\Index.cshtml" />
     <Content Include="Scripts\moment.min.js.map" />
     <Content Include="Scripts\moment-with-locales.min.js.map" />
+    <Content Include="Views\Education\Index.cshtml" />
+    <Content Include="Views\Education\DiverseCultures.cshtml" />
+    <Content Include="Views\Education\MigrationStories.cshtml" />
+    <Content Include="Views\Education\CountryStory\China.cshtml" />
+    <Content Include="Views\Education\CountryStory\Japan.cshtml" />
+    <Content Include="Views\Education\CountryStory\Korea.cshtml" />
+    <Content Include="Views\Education\CountryStory\Philipines.cshtml" />
+    <Content Include="Views\Education\CountryStory\Vietnam.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Content\Customer\vendor\FormGuide\PHPFormValidator\tests\" />
