--- a/TP03MainProj/TP03MainProj.csproj
+++ b/TP03MainProj/TP03MainProj.csproj
@@ -1007,6 +1007,25 @@
     <Content Include="Content\Customer\images\news-thumbnail\pic-blog-4.jpg" />
     <Content Include="Content\Customer\images\news-thumbnail\pic-blog-5.jpg" />
     <Content Include="Content\Customer\images\news-thumbnail\pic-blog-6.jpg" />
+    <Content Include="Content\Customer\images\slider\1.jpg" />
+    <Content Include="Content\Customer\images\slider\2.jpg" />
+    <Content Include="Content\Customer\images\slider\3.jpg" />
+    <Content Include="Content\Customer\images\slider\4.jpg" />
+    <Content Include="Content\Customer\images\study-case-single\main\cn\1861.png" />
+    <Content Include="Content\Customer\images\study-case-single\main\cn\new born.png" />
+    <Content Include="Content\Customer\images\study-case-single\main\jp\1.jpeg" />
+    <Content Include="Content\Customer\images\study-case-single\main\jp\2.jpeg" />
+    <Content Include="Content\Customer\images\study-case-single\main\ko\1.jpeg" />
+    <Content Include="Content\Customer\images\study-case-single\main\ko\2.jpeg" />
+    <Content Include="Content\Customer\images\study-case-single\main\phi\1.jpeg" />
+    <Content Include="Content\Customer\images\study-case-single\main\phi\2.jpeg" />
+    <Content Include="Content\Customer\images\study-case-single\main\vit\1.jpeg" />
+    <Content Include="Content\Customer\images\study-case-single\main\vit\2.jpeg" />
+    <Content Include="Content\Customer\images\study-case\3.jpg" />
+    <Content Include="Content\Customer\images\study-case\4.jpg" />
+    <Content Include="Content\Customer\images\study-case\5.jpg" />
+    <Content Include="Content\Customer\images\study-case\6.jpg" />
+    <Content Include="Content\Customer\images\study-case\7.jpg" />
     <Content Include="Content\Customer\images\svg\all-servers-svgrepo-com.svg" />
     <Content Include="Content\Customer\images\svg\browser-svgrepo-com.svg" />
     <Content Include="Content\Customer\images\svg\collaboration-svgrepo-com.svg" />
@@ -1034,6 +1053,39 @@
     <Content Include="Content\Customer\images\testimonial\6.jpg" />
     <Content Include="Content\Customer\images\testimonial\7.jpg" />
     <Content Include="Content\Customer\images\testimonial\8.jpg" />
+    <Content Include="Content\Customer\images\timeline\Chinese\1850.jpg" />
+    <Content Include="Content\Customer\images\timeline\Chinese\1861.jpg" />
+    <Content Include="Content\Customer\images\timeline\Chinese\1901 act.png" />
+    <Content Include="Content\Customer\images\timeline\Chinese\1970.jpg" />
+    <Content Include="Content\Customer\images\timeline\Chinese\1986-199.jpg" />
+    <Content Include="Content\Customer\images\timeline\Chinese\1986-1991.jpg" />
+    <Content Include="Content\Customer\images\timeline\Chinese\Late 1800s.png" />
+    <Content Include="Content\Customer\images\timeline\Japan\1901 act.png" />
+    <Content Include="Content\Customer\images\timeline\Japan\1944.jpg" />
+    <Content Include="Content\Customer\images\timeline\Japan\Japanese.png" />
+    <Content Include="Content\Customer\images\timeline\Japan\late1800s.jpg" />
+    <Content Include="Content\Customer\images\timeline\Korean\1960.jpg" />
+    <Content Include="Content\Customer\images\timeline\Korean\1960s.jpg" />
+    <Content Include="Content\Customer\images\timeline\Korean\1962.jpg" />
+    <Content Include="Content\Customer\images\timeline\Korean\1973.jpg" />
+    <Content Include="Content\Customer\images\timeline\Korean\1977.2.png" />
+    <Content Include="Content\Customer\images\timeline\Korean\1979.jpg" />
+    <Content Include="Content\Customer\images\timeline\Korean\1981.jpg" />
+    <Content Include="Content\Customer\images\timeline\Korean\1991.png" />
+    <Content Include="Content\Customer\images\timeline\Korean\2010.png" />
+    <Content Include="Content\Customer\images\timeline\Korean\2016.jpg" />
+    <Content Include="Content\Customer\images\timeline\Korean\下载.jpeg" />
+    <Content Include="Content\Customer\images\timeline\Phili\1950.jpg" />
+    <Content Include="Content\Customer\images\timeline\Phili\1970.jpg" />
+    <Content Include="Content\Customer\images\timeline\Phili\2016.jpg" />
+    <Content Include="Content\Customer\images\timeline\Phili\early 20.jpg" />
+    <Content Include="Content\Customer\images\timeline\vietna\03de25f870b5691a7b29ffa96d74dd6b.jpeg" />
+    <Content Include="Content\Customer\images\timeline\vietna\1976.jpg" />
+    <Content Include="Content\Customer\images\timeline\vietna\2000.jpg" />
+    <Content Include="Content\Customer\images\timeline\vietna\after1975.jpg" />
+    <Content Include="Content\Customer\images\timeline\vietna\after1981.jpg" />
+    <Content Include="Content\Customer\images\timeline\vietna\community.jpg" />
+    <Content Include="Content\Customer\images\timeline\vietna\post1975.jpg" />
     <Content Include="Content\Customer\images\ui\arrow-down-light.png" />
     <Content Include="Content\Customer\images\ui\arrow-down.png" />
     <Content Include="Content\Customer\images\ui\arrow-up-light.png" />
@@ -1123,10 +1175,6 @@
     <Content Include="Content\Customer\images\services\2.webp" />
     <Content Include="Content\Customer\images\services\3.webp" />
     <Content Include="Content\Customer\images\services\4.webp" />
-    <Content Include="Content\Customer\images\slider\1.webp" />
-    <Content Include="Content\Customer\images\slider\2.webp" />
-    <Content Include="Content\Customer\images\slider\3.webp" />
-    <Content Include="Content\Customer\images\slider\4.webp" />
     <Content Include="Content\Customer\images\study-case-single\1.webp" />
     <Content Include="Content\Customer\images\study-case-single\2.webp" />
     <Content Include="Content\Customer\images\study-case-single\3.webp" />
@@ -1134,18 +1182,6 @@
     <Content Include="Content\Customer\images\study-case\1.webp" />
     <Content Include="Content\Customer\images\study-case\2.webp" />
     <Content Include="Content\Customer\images\study-case\3.webp" />
-    <Content Include="Content\Customer\images\study-case\4.webp" />
-    <Content Include="Content\Customer\images\study-case\5.webp" />
-    <Content Include="Content\Customer\images\study-case\6.webp" />
-    <Content Include="Content\Customer\images\timeline\1.webp" />
-    <Content Include="Content\Customer\images\timeline\2.webp" />
-    <Content Include="Content\Customer\images\timeline\3.webp" />
-    <Content Include="Content\Customer\images\timeline\4.webp" />
-    <Content Include="Content\Customer\images\timeline\5.webp" />
-    <Content Include="Content\Customer\images\timeline\6.webp" />
-    <Content Include="Content\Customer\images\timeline\7.webp" />
-    <Content Include="Content\Customer\images\timeline\8.webp" />
-    <Content Include="Content\Customer\images\timeline\9.webp" />
     <Content Include="Content\Customer\src\FormHandler.php" />
     <Content Include="Content\Customer\src\index.php" />
     <Content Include="Content\Customer\src\ReCaptchaValidator.php" />
@@ -1222,6 +1258,16 @@
     <Content Include="Content\DataSource\calendar_data.csv" />
     <Content Include="Content\DataSource\melbourne_events.csv" />
     <Content Include="Content\Customer\images\mig\p2.webp" />
+    <Content Include="Content\Customer\images\timeline\Chinese\1970反歧视代表人物.webp" />
+    <Content Include="Content\Customer\images\timeline\Chinese\2.webp" />
+    <Content Include="Content\Customer\images\timeline\Chinese\2024.webp" />
+    <Content Include="Content\Customer\images\timeline\vietna\1975.webp" />
+    <Content Include="Content\Customer\images\services\11.webp" />
+    <Content Include="Content\Customer\images\services\22.webp" />
+    <Content Include="Content\Customer\images\services\33.webp" />
+    <Content Include="Content\Customer\images\services\44.webp" />
+    <Content Include="Content\Customer\images\mig\jp1.avif" />
+    <None Include="Properties\PublishProfiles\cultmelboune - Web Deploy.pubxml" />
     <None Include="Scripts\jquery-3.7.1.intellisense.js" />
     <Content Include="Scripts\index.global.js" />
     <Content Include="Scripts\index.global.min.js" />
