--- a/TP03MainProj/TP03MainProj.csproj
+++ b/TP03MainProj/TP03MainProj.csproj
@@ -1090,13 +1090,11 @@
     <Content Include="Content\Customer\images\ui\arrow-down.png" />
     <Content Include="Content\Customer\images\ui\arrow-up-light.png" />
     <Content Include="Content\Customer\images\ui\arrow-up.png" />
-    <Content Include="Content\Customer\vendor\FormGuide\PHPFormValidator\.gitignore" />
-    <Content Include="Content\Customer\vendor\FormGuide\PHPFormValidator\phpunit.xml" />
-    <Content Include="Content\Customer\vendor\gregwar\captcha\.gitignore" />
     <Content Include="Content\fullcalendar.css" />
     <Content Include="Content\fullcalendar.min.css" />
     <Content Include="Content\fullcalendar.print.css" />
     <Content Include="Content\fullcalendar.print.min.css" />
+    <Content Include="Content\Mycss\mycss.css" />
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
@@ -1182,65 +1180,6 @@
     <Content Include="Content\Customer\images\study-case\1.webp" />
     <Content Include="Content\Customer\images\study-case\2.webp" />
     <Content Include="Content\Customer\images\study-case\3.webp" />
-    <Content Include="Content\Customer\src\FormHandler.php" />
-    <Content Include="Content\Customer\src\index.php" />
-    <Content Include="Content\Customer\src\ReCaptchaValidator.php" />
-    <Content Include="Content\Customer\vendor\autoload.php" />
-    <Content Include="Content\Customer\vendor\composer\autoload_classmap.php" />
-    <Content Include="Content\Customer\vendor\composer\autoload_namespaces.php" />
-    <Content Include="Content\Customer\vendor\composer\autoload_psr4.php" />
-    <Content Include="Content\Customer\vendor\composer\autoload_real.php" />
-    <Content Include="Content\Customer\vendor\composer\autoload_static.php" />
-    <Content Include="Content\Customer\vendor\composer\ClassLoader.php" />
-    <Content Include="Content\Customer\vendor\composer\installed.json" />
-    <Content Include="Content\Customer\vendor\composer\LICENSE" />
-    <Content Include="Content\Customer\vendor\FormGuide\PHPFormValidator\composer.json" />
-    <Content Include="Content\Customer\vendor\FormGuide\PHPFormValidator\LICENSE" />
-    <Content Include="Content\Customer\vendor\FormGuide\PHPFormValidator\README.md" />
-    <Content Include="Content\Customer\vendor\FormGuide\PHPFormValidator\src\FieldValidator.php" />
-    <Content Include="Content\Customer\vendor\FormGuide\PHPFormValidator\src\FieldValidatorCollection.php" />
-    <Content Include="Content\Customer\vendor\FormGuide\PHPFormValidator\src\FormValidator.php" />
-    <Content Include="Content\Customer\vendor\FormGuide\PHPFormValidator\src\ValidatorMap.php" />
-    <Content Include="Content\Customer\vendor\FormGuide\PHPFormValidator\src\Validators.php" />
-    <Content Include="Content\Customer\vendor\FormGuide\PHPFormValidator\src\ValidatorsList.php" />
-    <Content Include="Content\Customer\vendor\gregwar\captcha\.travis.yml" />
-    <Content Include="Content\Customer\vendor\gregwar\captcha\autoload.php" />
-    <Content Include="Content\Customer\vendor\gregwar\captcha\CaptchaBuilder.php" />
-    <Content Include="Content\Customer\vendor\gregwar\captcha\CaptchaBuilderInterface.php" />
-    <Content Include="Content\Customer\vendor\gregwar\captcha\composer.json" />
-    <Content Include="Content\Customer\vendor\gregwar\captcha\demo\demo.php" />
-    <Content Include="Content\Customer\vendor\gregwar\captcha\demo\fingerprint.php" />
-    <Content Include="Content\Customer\vendor\gregwar\captcha\demo\index.php" />
-    <Content Include="Content\Customer\vendor\gregwar\captcha\demo\ocr.php" />
-    <Content Include="Content\Customer\vendor\gregwar\captcha\demo\output.php" />
-    <Content Include="Content\Customer\vendor\gregwar\captcha\Font\captcha0.ttf" />
-    <Content Include="Content\Customer\vendor\gregwar\captcha\Font\captcha1.ttf" />
-    <Content Include="Content\Customer\vendor\gregwar\captcha\Font\captcha2.ttf" />
-    <Content Include="Content\Customer\vendor\gregwar\captcha\Font\captcha3.ttf" />
-    <Content Include="Content\Customer\vendor\gregwar\captcha\Font\captcha4.ttf" />
-    <Content Include="Content\Customer\vendor\gregwar\captcha\Font\captcha5.ttf" />
-    <Content Include="Content\Customer\vendor\gregwar\captcha\ImageFileHandler.php" />
-    <Content Include="Content\Customer\vendor\gregwar\captcha\LICENSE" />
-    <Content Include="Content\Customer\vendor\gregwar\captcha\PhraseBuilder.php" />
-    <Content Include="Content\Customer\vendor\gregwar\captcha\PhraseBuilderInterface.php" />
-    <Content Include="Content\Customer\vendor\gregwar\captcha\README.md" />
-    <Content Include="Content\Customer\vendor\phpmailer\phpmailer\.github\ISSUE_TEMPLATE.md" />
-    <Content Include="Content\Customer\vendor\phpmailer\phpmailer\.github\PULL_REQUEST_TEMPLATE.md" />
-    <Content Include="Content\Customer\vendor\phpmailer\phpmailer\class.phpmailer.php" />
-    <Content Include="Content\Customer\vendor\phpmailer\phpmailer\class.phpmaileroauth.php" />
-    <Content Include="Content\Customer\vendor\phpmailer\phpmailer\class.phpmaileroauthgoogle.php" />
-    <Content Include="Content\Customer\vendor\phpmailer\phpmailer\class.pop3.php" />
-    <Content Include="Content\Customer\vendor\phpmailer\phpmailer\class.smtp.php" />
-    <Content Include="Content\Customer\vendor\phpmailer\phpmailer\composer.json" />
-    <Content Include="Content\Customer\vendor\phpmailer\phpmailer\composer.lock" />
-    <Content Include="Content\Customer\vendor\phpmailer\phpmailer\extras\EasyPeasyICS.php" />
-    <Content Include="Content\Customer\vendor\phpmailer\phpmailer\extras\htmlfilter.php" />
-    <Content Include="Content\Customer\vendor\phpmailer\phpmailer\extras\ntlm_sasl_client.php" />
-    <Content Include="Content\Customer\vendor\phpmailer\phpmailer\extras\README.md" />
-    <Content Include="Content\Customer\vendor\phpmailer\phpmailer\get_oauth_token.php" />
-    <Content Include="Content\Customer\vendor\phpmailer\phpmailer\LICENSE" />
-    <Content Include="Content\Customer\vendor\phpmailer\phpmailer\PHPMailerAutoload.php" />
-    <Content Include="Content\Customer\vendor\phpmailer\phpmailer\VERSION" />
     <Content Include="Scripts\calendar.js" />
     <Content Include="Scripts\Customer\countdown-custom.js" />
     <Content Include="Scripts\Customer\custom-marquee.js" />
@@ -1408,9 +1347,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Content\Customer\vendor\FormGuide\PHPFormValidator\tests\" />
-    <Folder Include="Content\Customer\vendor\phpmailer\phpmailer\examples\" />
-    <Folder Include="Content\Customer\vendor\phpmailer\phpmailer\language\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap.rtl.min.css.map" />
