--- a/TP03MainProj/TP03MainProj.csproj
+++ b/TP03MainProj/TP03MainProj.csproj
@@ -173,6 +173,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Helper\AuthenticateFilter.cs" />
     <Compile Include="Helper\NavigationHelper.cs" />
     <Compile Include="Migrations\202403191317491_InitialCreate.cs" />
     <Compile Include="Migrations\202403191317491_InitialCreate.designer.cs">
@@ -1345,6 +1346,8 @@
     <Content Include="Views\Education\CountryStory\Korea.cshtml" />
     <Content Include="Views\Education\CountryStory\Philipines.cshtml" />
     <Content Include="Views\Education\CountryStory\Vietnam.cshtml" />
+    <Content Include="Views\Shared\WebGateLayout.cshtml" />
+    <Content Include="Views\Home\WebGate.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
