--- a/TP03MainProj/TP03MainProj.csproj
+++ b/TP03MainProj/TP03MainProj.csproj
@@ -1182,7 +1182,6 @@
     <Content Include="Content\Customer\images\study-case-single\3.webp" />
     <Content Include="Content\Customer\images\study-case-single\4.webp" />
     <Content Include="Scripts\calendar.js" />
-    <Content Include="Scripts\chartRender.js" />
     <Content Include="Scripts\charts.js" />
     <Content Include="Scripts\Customer\countdown-custom.js" />
     <Content Include="Scripts\Customer\custom-marquee.js" />
@@ -1206,25 +1205,25 @@
     <Content Include="Content\Customer\images\timeline\Chinese\2024.webp" />
     <Content Include="Content\Customer\images\timeline\vietna\1975.webp" />
     <Content Include="Content\Customer\images\mig\jp1.avif" />
-    <Content Include="DataHandle\China\china_occupation.json" />
-    <Content Include="DataHandle\China\china_population.json" />
-    <Content Include="DataHandle\China\china_religion.json" />
-    <Content Include="DataHandle\Japan\japan_occupation.json" />
-    <Content Include="DataHandle\Japan\japan_population.json" />
-    <Content Include="DataHandle\Korea\korea_occupation.json" />
-    <Content Include="DataHandle\Korea\korea_population.json" />
-    <Content Include="DataHandle\Korea\korea_religion.json" />
-    <Content Include="DataHandle\Philipines\philipines_occupation.json" />
-    <Content Include="DataHandle\Philipines\philipines_population.json" />
-    <Content Include="DataHandle\Philipines\philipines_religion.json" />
-    <Content Include="DataHandle\Vietnam\vietname_religion.json" />
-    <Content Include="DataHandle\Vietnam\vietnam_occupation.json" />
-    <Content Include="DataHandle\Vietnam\vietnam_population.json" />
-    <Content Include="DataHandle\China\age_distrbution.json" />
-    <Content Include="DataHandle\Japan\age_distrbution.json" />
-    <Content Include="DataHandle\Korea\age_distrbution.json" />
-    <Content Include="DataHandle\Philipines\age_distrbution.json" />
-    <Content Include="DataHandle\Vietnam\age_distrbution.json" />
+    <Content Include="DataHandle\china\occupation.json" />
+    <Content Include="DataHandle\china\population.json" />
+    <Content Include="DataHandle\china\religion.json" />
+    <Content Include="DataHandle\japan\occupation.json" />
+    <Content Include="DataHandle\japan\population.json" />
+    <Content Include="DataHandle\korea\occupation.json" />
+    <Content Include="DataHandle\korea\population.json" />
+    <Content Include="DataHandle\korea\religion.json" />
+    <Content Include="DataHandle\philipines\occupation.json" />
+    <Content Include="DataHandle\philipines\population.json" />
+    <Content Include="DataHandle\philipines\religion.json" />
+    <Content Include="DataHandle\vietnam\religion.json" />
+    <Content Include="DataHandle\vietnam\occupation.json" />
+    <Content Include="DataHandle\vietnam\population.json" />
+    <Content Include="DataHandle\china\age_distrbution.json" />
+    <Content Include="DataHandle\japan\age_distrbution.json" />
+    <Content Include="DataHandle\korea\age_distrbution.json" />
+    <Content Include="DataHandle\philipines\age_distrbution.json" />
+    <Content Include="DataHandle\vietnam\age_distrbution.json" />
     <None Include="Properties\PublishProfiles\cultmelboune - Web Deploy.pubxml" />
     <None Include="Scripts\jquery-3.7.1.intellisense.js" />
     <Content Include="Scripts\index.global.js" />
@@ -1370,7 +1369,6 @@
     <Content Include="Views\Education\DataInsight\JapanData.cshtml" />
     <Content Include="Views\Education\DataInsight\KoreaData.cshtml" />
     <Content Include="Views\Education\DataInsight\PhilipinesData.cshtml" />
-    <Content Include="Views\Education\ChartPartial.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
