--- a/TP03MainProj/TP03MainProj.csproj
+++ b/TP03MainProj/TP03MainProj.csproj
@@ -256,6 +256,16 @@
     <Content Include="Content\ImageSRC\Filipino\4.jpg" />
     <Content Include="Content\ImageSRC\Filipino\5.png" />
     <Content Include="Content\ImageSRC\Filipino\6.jpg" />
+    <Content Include="Content\ImageSRC\Japanese\1.png" />
+    <Content Include="Content\ImageSRC\Japanese\10.jpg" />
+    <Content Include="Content\ImageSRC\Japanese\2.jpg" />
+    <Content Include="Content\ImageSRC\Japanese\3.jpg" />
+    <Content Include="Content\ImageSRC\Japanese\4.jpg" />
+    <Content Include="Content\ImageSRC\Japanese\5.jpg" />
+    <Content Include="Content\ImageSRC\Japanese\6.jpg" />
+    <Content Include="Content\ImageSRC\Japanese\7.jpg" />
+    <Content Include="Content\ImageSRC\Japanese\8.jpg" />
+    <Content Include="Content\ImageSRC\Japanese\9.jpg" />
     <Content Include="Content\ImageSRC\Korean\1.jpg" />
     <Content Include="Content\ImageSRC\Korean\10.png" />
     <Content Include="Content\ImageSRC\Korean\2.jpg" />
@@ -266,6 +276,16 @@
     <Content Include="Content\ImageSRC\Korean\7.png" />
     <Content Include="Content\ImageSRC\Korean\8.jpg" />
     <Content Include="Content\ImageSRC\Korean\9.jpg" />
+    <Content Include="Content\ImageSRC\Vietnamese\1.jpg" />
+    <Content Include="Content\ImageSRC\Vietnamese\10.jpg" />
+    <Content Include="Content\ImageSRC\Vietnamese\2.jpg" />
+    <Content Include="Content\ImageSRC\Vietnamese\3.jpg" />
+    <Content Include="Content\ImageSRC\Vietnamese\4.jpg" />
+    <Content Include="Content\ImageSRC\Vietnamese\5.png" />
+    <Content Include="Content\ImageSRC\Vietnamese\6.jpg" />
+    <Content Include="Content\ImageSRC\Vietnamese\7.jpg" />
+    <Content Include="Content\ImageSRC\Vietnamese\8.png" />
+    <Content Include="Content\ImageSRC\Vietnamese\9.jpg" />
     <Content Include="Content\Mycss\Education.css" />
     <Content Include="Content\Customer\css\plugins.css" />
     <Content Include="Content\Customer\css\style.css" />
@@ -1252,10 +1272,10 @@
     <Content Include="DataHandle\philipines\age_distrbution.json" />
     <Content Include="DataHandle\vietnam\age_distrbution.json" />
     <Content Include="Content\Quizzes\Filipino_cult_quiz.json" />
-    <Content Include="Content\Quizzes\Japanese_cult_quiz.json" />
     <Content Include="Content\Quizzes\Korean_cult_quiz.json" />
     <Content Include="Content\Quizzes\Chinese_cult_quiz.json" />
     <Content Include="Content\Quizzes\Vietnamese_cult_quiz.json" />
+    <Content Include="Content\Quizzes\Japanese_cult_quiz.json" />
     <None Include="Properties\PublishProfiles\cultmelboune - Web Deploy.pubxml" />
     <None Include="Scripts\jquery-3.7.1.intellisense.js" />
     <Content Include="Scripts\index.global.js" />
@@ -1406,8 +1426,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Content\ImageSRC\Japanese\" />
-    <Folder Include="Content\ImageSRC\Vietnamese\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap.rtl.min.css.map" />
