--- a/TP03MainProj/TP03MainProj.csproj
+++ b/TP03MainProj/TP03MainProj.csproj
@@ -240,52 +240,52 @@
     <Content Include="Content\Customer\css\jquery.countdown.css" />
     <Content Include="Content\Customer\css\mdb.min.css" />
     <Content Include="Content\Customer\css\mdb.rtl.min.css" />
-    <Content Include="Content\ImageSRC\Chinese\1.png" />
-    <Content Include="Content\ImageSRC\Chinese\10.jpg" />
-    <Content Include="Content\ImageSRC\Chinese\2.jpg" />
-    <Content Include="Content\ImageSRC\Chinese\3.jpg" />
-    <Content Include="Content\ImageSRC\Chinese\4.png" />
-    <Content Include="Content\ImageSRC\Chinese\5.jpg" />
-    <Content Include="Content\ImageSRC\Chinese\6.jpg" />
-    <Content Include="Content\ImageSRC\Chinese\7.jpg" />
-    <Content Include="Content\ImageSRC\Chinese\8.png" />
-    <Content Include="Content\ImageSRC\Chinese\9.jpg" />
-    <Content Include="Content\ImageSRC\Filipino\1.jpg" />
-    <Content Include="Content\ImageSRC\Filipino\2.jpg" />
-    <Content Include="Content\ImageSRC\Filipino\3.jpg" />
-    <Content Include="Content\ImageSRC\Filipino\4.jpg" />
-    <Content Include="Content\ImageSRC\Filipino\5.png" />
-    <Content Include="Content\ImageSRC\Filipino\6.jpg" />
-    <Content Include="Content\ImageSRC\Japanese\1.png" />
-    <Content Include="Content\ImageSRC\Japanese\10.jpg" />
-    <Content Include="Content\ImageSRC\Japanese\2.jpg" />
-    <Content Include="Content\ImageSRC\Japanese\3.jpg" />
-    <Content Include="Content\ImageSRC\Japanese\4.jpg" />
-    <Content Include="Content\ImageSRC\Japanese\5.jpg" />
-    <Content Include="Content\ImageSRC\Japanese\6.jpg" />
-    <Content Include="Content\ImageSRC\Japanese\7.jpg" />
-    <Content Include="Content\ImageSRC\Japanese\8.jpg" />
-    <Content Include="Content\ImageSRC\Japanese\9.jpg" />
-    <Content Include="Content\ImageSRC\Korean\1.jpg" />
-    <Content Include="Content\ImageSRC\Korean\10.png" />
-    <Content Include="Content\ImageSRC\Korean\2.jpg" />
-    <Content Include="Content\ImageSRC\Korean\3.jpg" />
-    <Content Include="Content\ImageSRC\Korean\4.jpg" />
-    <Content Include="Content\ImageSRC\Korean\5.jpg" />
-    <Content Include="Content\ImageSRC\Korean\6.png" />
-    <Content Include="Content\ImageSRC\Korean\7.png" />
-    <Content Include="Content\ImageSRC\Korean\8.jpg" />
-    <Content Include="Content\ImageSRC\Korean\9.jpg" />
-    <Content Include="Content\ImageSRC\Vietnamese\1.jpg" />
-    <Content Include="Content\ImageSRC\Vietnamese\10.jpg" />
-    <Content Include="Content\ImageSRC\Vietnamese\2.jpg" />
-    <Content Include="Content\ImageSRC\Vietnamese\3.jpg" />
-    <Content Include="Content\ImageSRC\Vietnamese\4.jpg" />
-    <Content Include="Content\ImageSRC\Vietnamese\5.png" />
-    <Content Include="Content\ImageSRC\Vietnamese\6.jpg" />
-    <Content Include="Content\ImageSRC\Vietnamese\7.jpg" />
-    <Content Include="Content\ImageSRC\Vietnamese\8.png" />
-    <Content Include="Content\ImageSRC\Vietnamese\9.jpg" />
+    <Content Include="Content\ImageSRC\chinese\1.png" />
+    <Content Include="Content\ImageSRC\chinese\10.jpg" />
+    <Content Include="Content\ImageSRC\chinese\2.jpg" />
+    <Content Include="Content\ImageSRC\chinese\3.jpg" />
+    <Content Include="Content\ImageSRC\chinese\4.png" />
+    <Content Include="Content\ImageSRC\chinese\5.jpg" />
+    <Content Include="Content\ImageSRC\chinese\6.jpg" />
+    <Content Include="Content\ImageSRC\chinese\7.jpg" />
+    <Content Include="Content\ImageSRC\chinese\8.png" />
+    <Content Include="Content\ImageSRC\chinese\9.jpg" />
+    <Content Include="Content\ImageSRC\filipino\1.jpg" />
+    <Content Include="Content\ImageSRC\filipino\2.jpg" />
+    <Content Include="Content\ImageSRC\filipino\3.jpg" />
+    <Content Include="Content\ImageSRC\filipino\4.jpg" />
+    <Content Include="Content\ImageSRC\filipino\5.png" />
+    <Content Include="Content\ImageSRC\filipino\6.jpg" />
+    <Content Include="Content\ImageSRC\japanese\1.png" />
+    <Content Include="Content\ImageSRC\japanese\10.jpg" />
+    <Content Include="Content\ImageSRC\japanese\2.jpg" />
+    <Content Include="Content\ImageSRC\japanese\3.jpg" />
+    <Content Include="Content\ImageSRC\japanese\4.jpg" />
+    <Content Include="Content\ImageSRC\japanese\5.jpg" />
+    <Content Include="Content\ImageSRC\japanese\6.jpg" />
+    <Content Include="Content\ImageSRC\japanese\7.jpg" />
+    <Content Include="Content\ImageSRC\japanese\8.jpg" />
+    <Content Include="Content\ImageSRC\japanese\9.jpg" />
+    <Content Include="Content\ImageSRC\korean\1.jpg" />
+    <Content Include="Content\ImageSRC\korean\10.png" />
+    <Content Include="Content\ImageSRC\korean\2.jpg" />
+    <Content Include="Content\ImageSRC\korean\3.jpg" />
+    <Content Include="Content\ImageSRC\korean\4.jpg" />
+    <Content Include="Content\ImageSRC\korean\5.jpg" />
+    <Content Include="Content\ImageSRC\korean\6.png" />
+    <Content Include="Content\ImageSRC\korean\7.png" />
+    <Content Include="Content\ImageSRC\korean\8.jpg" />
+    <Content Include="Content\ImageSRC\korean\9.jpg" />
+    <Content Include="Content\ImageSRC\vietnamese\1.jpg" />
+    <Content Include="Content\ImageSRC\vietnamese\10.jpg" />
+    <Content Include="Content\ImageSRC\vietnamese\2.jpg" />
+    <Content Include="Content\ImageSRC\vietnamese\3.jpg" />
+    <Content Include="Content\ImageSRC\vietnamese\4.jpg" />
+    <Content Include="Content\ImageSRC\vietnamese\5.png" />
+    <Content Include="Content\ImageSRC\vietnamese\6.jpg" />
+    <Content Include="Content\ImageSRC\vietnamese\7.jpg" />
+    <Content Include="Content\ImageSRC\vietnamese\8.png" />
+    <Content Include="Content\ImageSRC\vietnamese\9.jpg" />
     <Content Include="Content\Mycss\Education.css" />
     <Content Include="Content\Customer\css\plugins.css" />
     <Content Include="Content\Customer\css\style.css" />
