--- a/TP03MainProj/TP03MainProj.csproj
+++ b/TP03MainProj/TP03MainProj.csproj
@@ -240,52 +240,52 @@
     <Content Include="Content\Customer\css\jquery.countdown.css" />
     <Content Include="Content\Customer\css\mdb.min.css" />
     <Content Include="Content\Customer\css\mdb.rtl.min.css" />
-    <Content Include="Content\ImageSRC\chinese\1.png" />
-    <Content Include="Content\ImageSRC\chinese\10.jpg" />
-    <Content Include="Content\ImageSRC\chinese\2.jpg" />
-    <Content Include="Content\ImageSRC\chinese\3.jpg" />
-    <Content Include="Content\ImageSRC\chinese\4.png" />
-    <Content Include="Content\ImageSRC\chinese\5.jpg" />
-    <Content Include="Content\ImageSRC\chinese\6.jpg" />
-    <Content Include="Content\ImageSRC\chinese\7.jpg" />
-    <Content Include="Content\ImageSRC\chinese\8.png" />
-    <Content Include="Content\ImageSRC\chinese\9.jpg" />
-    <Content Include="Content\ImageSRC\filipino\1.jpg" />
-    <Content Include="Content\ImageSRC\filipino\2.jpg" />
-    <Content Include="Content\ImageSRC\filipino\3.jpg" />
-    <Content Include="Content\ImageSRC\filipino\4.jpg" />
-    <Content Include="Content\ImageSRC\filipino\5.png" />
-    <Content Include="Content\ImageSRC\filipino\6.jpg" />
-    <Content Include="Content\ImageSRC\japanese\1.png" />
-    <Content Include="Content\ImageSRC\japanese\10.jpg" />
-    <Content Include="Content\ImageSRC\japanese\2.jpg" />
-    <Content Include="Content\ImageSRC\japanese\3.jpg" />
-    <Content Include="Content\ImageSRC\japanese\4.jpg" />
-    <Content Include="Content\ImageSRC\japanese\5.jpg" />
-    <Content Include="Content\ImageSRC\japanese\6.jpg" />
-    <Content Include="Content\ImageSRC\japanese\7.jpg" />
-    <Content Include="Content\ImageSRC\japanese\8.jpg" />
-    <Content Include="Content\ImageSRC\japanese\9.jpg" />
-    <Content Include="Content\ImageSRC\korean\1.jpg" />
-    <Content Include="Content\ImageSRC\korean\10.png" />
-    <Content Include="Content\ImageSRC\korean\2.jpg" />
-    <Content Include="Content\ImageSRC\korean\3.jpg" />
-    <Content Include="Content\ImageSRC\korean\4.jpg" />
-    <Content Include="Content\ImageSRC\korean\5.jpg" />
-    <Content Include="Content\ImageSRC\korean\6.png" />
-    <Content Include="Content\ImageSRC\korean\7.png" />
-    <Content Include="Content\ImageSRC\korean\8.jpg" />
-    <Content Include="Content\ImageSRC\korean\9.jpg" />
-    <Content Include="Content\ImageSRC\vietnamese\1.jpg" />
-    <Content Include="Content\ImageSRC\vietnamese\10.jpg" />
-    <Content Include="Content\ImageSRC\vietnamese\2.jpg" />
-    <Content Include="Content\ImageSRC\vietnamese\3.jpg" />
-    <Content Include="Content\ImageSRC\vietnamese\4.jpg" />
-    <Content Include="Content\ImageSRC\vietnamese\5.png" />
-    <Content Include="Content\ImageSRC\vietnamese\6.jpg" />
-    <Content Include="Content\ImageSRC\vietnamese\7.jpg" />
-    <Content Include="Content\ImageSRC\vietnamese\8.png" />
-    <Content Include="Content\ImageSRC\vietnamese\9.jpg" />
+    <Content Include="Content\Images\chinese\1.png" />
+    <Content Include="Content\Images\chinese\10.jpg" />
+    <Content Include="Content\Images\chinese\2.jpg" />
+    <Content Include="Content\Images\chinese\3.jpg" />
+    <Content Include="Content\Images\chinese\4.png" />
+    <Content Include="Content\Images\chinese\5.jpg" />
+    <Content Include="Content\Images\chinese\6.jpg" />
+    <Content Include="Content\Images\chinese\7.jpg" />
+    <Content Include="Content\Images\chinese\8.png" />
+    <Content Include="Content\Images\chinese\9.jpg" />
+    <Content Include="Content\Images\filipino\1.jpg" />
+    <Content Include="Content\Images\filipino\2.jpg" />
+    <Content Include="Content\Images\filipino\3.jpg" />
+    <Content Include="Content\Images\filipino\4.jpg" />
+    <Content Include="Content\Images\filipino\5.png" />
+    <Content Include="Content\Images\filipino\6.jpg" />
+    <Content Include="Content\Images\japanese\1.png" />
+    <Content Include="Content\Images\japanese\10.jpg" />
+    <Content Include="Content\Images\japanese\2.jpg" />
+    <Content Include="Content\Images\japanese\3.jpg" />
+    <Content Include="Content\Images\japanese\4.jpg" />
+    <Content Include="Content\Images\japanese\5.jpg" />
+    <Content Include="Content\Images\japanese\6.jpg" />
+    <Content Include="Content\Images\japanese\7.jpg" />
+    <Content Include="Content\Images\japanese\8.jpg" />
+    <Content Include="Content\Images\japanese\9.jpg" />
+    <Content Include="Content\Images\korean\1.jpg" />
+    <Content Include="Content\Images\korean\10.png" />
+    <Content Include="Content\Images\korean\2.jpg" />
+    <Content Include="Content\Images\korean\3.jpg" />
+    <Content Include="Content\Images\korean\4.jpg" />
+    <Content Include="Content\Images\korean\5.jpg" />
+    <Content Include="Content\Images\korean\6.png" />
+    <Content Include="Content\Images\korean\7.png" />
+    <Content Include="Content\Images\korean\8.jpg" />
+    <Content Include="Content\Images\korean\9.jpg" />
+    <Content Include="Content\Images\vietnamese\1.jpg" />
+    <Content Include="Content\Images\vietnamese\10.jpg" />
+    <Content Include="Content\Images\vietnamese\2.jpg" />
+    <Content Include="Content\Images\vietnamese\3.jpg" />
+    <Content Include="Content\Images\vietnamese\4.jpg" />
+    <Content Include="Content\Images\vietnamese\5.png" />
+    <Content Include="Content\Images\vietnamese\6.jpg" />
+    <Content Include="Content\Images\vietnamese\7.jpg" />
+    <Content Include="Content\Images\vietnamese\8.png" />
+    <Content Include="Content\Images\vietnamese\9.jpg" />
     <Content Include="Content\Mycss\Education.css" />
     <Content Include="Content\Customer\css\plugins.css" />
     <Content Include="Content\Customer\css\style.css" />
@@ -1271,11 +1271,11 @@
     <Content Include="DataHandle\korea\age_distrbution.json" />
     <Content Include="DataHandle\philipines\age_distrbution.json" />
     <Content Include="DataHandle\vietnam\age_distrbution.json" />
-    <Content Include="Content\Quizzes\Filipino_cult_quiz.json" />
-    <Content Include="Content\Quizzes\Korean_cult_quiz.json" />
-    <Content Include="Content\Quizzes\Chinese_cult_quiz.json" />
-    <Content Include="Content\Quizzes\Vietnamese_cult_quiz.json" />
-    <Content Include="Content\Quizzes\Japanese_cult_quiz.json" />
+    <Content Include="Content\Quizzes\filipino_cult_quiz.json" />
+    <Content Include="Content\Quizzes\korean_cult_quiz.json" />
+    <Content Include="Content\Quizzes\chinese_cult_quiz.json" />
+    <Content Include="Content\Quizzes\vietnamese_cult_quiz.json" />
+    <Content Include="Content\Quizzes\japanese_cult_quiz.json" />
     <None Include="Properties\PublishProfiles\cultmelboune - Web Deploy.pubxml" />
     <None Include="Scripts\jquery-3.7.1.intellisense.js" />
     <Content Include="Scripts\index.global.js" />
